Fixed bugs in test changes